...
  String get ok                  => _g('ok');

  // ════════════════════════════════════════════════════════════════════════════
  // ENGLISH
  // ════════════════════════════════════════════════════════════════════════════
  static const Map<String, String> _en = {
    'settings': 'Settings',
    'profile': 'Profile',
    'editProfile': 'Edit Profile',
    'updateNamePhoto': 'Update your name and photo',
    'changePassword': 'Change Password',
    'updatePassword': 'Update your account password',
    'emailAddress': 'Email Address',
...
